# DupeFileFinder

./: README.md  pyproject.toml
src/: out.txt
src/dupefilefinder/: __main__.py
