[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dupefilefinder"
version = "0.0.1"
authors = [
  { name="Razif", email="m.razif.pramuda@gmail.com" },
]
description = "Package for finding duplicate file names in a folder recursively"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/razzzp/DupeFileFinder"